--- a/reflection_template.qmd
+++ b/reflection_template.qmd
@@ -119,7 +119,7 @@ teacher_evals_clean <- teacher_evals |>
 -   Numeric Example 2
 
 ```{r}
-#| label: wd-3-date
+#| label: wd-3-numeric-ex-2
 
 yr1_by_course <- teacher_evals_clean |>
   filter(seniority == 1)
@@ -168,6 +168,7 @@ checkins_0109 <- get_fit_now_check_in |>
 
 ```{r}
 #| label: wd-4-numeric-ex-1
+
 # Lab 3 Q11 — create a new numeric summary column
 yr1_by_course <- teacher_evals_clean |>
   filter(seniority == 1) |>
@@ -346,7 +347,7 @@ ca_childcare <- counties |>
 -   `inner_join()` Example 2
 
 ```{r}
-#| label: wd-5-left-ex-1
+#| label: wd-5-inner-ex-2
 # Lab 4 Q3
 ca_childcare <- ca_childcare |>
   left_join(
